<resources>
    <string name="app_name">WorkWithRetrofit</string>
    <string name="panel">ПАНЕЛЬ</string>
    <string name="catalog_genres_bottomNav">КАТАЛОГ ЖАНРОВ</string>
    <string name="catalog_films_bottomNav">КАТАЛОГ ФИЛЬМОВ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_all_genres">УДАЛИТЬ ВСЕ ЖАНРЫ</string>
    <string name="delete_all_films">УДАЛИТЬ ВСЕ ФИЛЬМЫ</string>
    <string name="edit_genre">РЕДАКТИРОВАНИЕ ЖАНРА</string>
    <string name="enter_name_genre">Введите название жанра</string>
    <string name="edit_film">РЕДАКТИРОВАНИЕ ФИЛЬМА</string>
    <string name="enter_name_film">Введите название фильма</string>
    <string name="enter_rating_film">Введите рейтинг фильма</string>
    <string name="add_button_film">ДОБАВИТЬ ФИЛЬМ</string>
    <string name="edit_button_film">ИЗМЕНИТЬ ФИЛЬМ</string>
    <string name="add_film_header">Добавить фильм</string>
</resources>